<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/editTextId"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:autofillHints="no"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/id"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/editTextName"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,TextContrastCheck"
            tools:layout_editor_absoluteY="33dp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editTextId"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="32dp" />

        <EditText
            android:id="@+id/editType"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/type"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editTextName"
            app:layout_constraintStart_toStartOf="@+id/editTextId"
            app:layout_constraintTop_toBottomOf="@+id/editTextName" />

        <EditText
            android:id="@+id/editTextBrewery"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/brewery"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/editType"
            app:layout_constraintStart_toStartOf="@+id/editType"
            app:layout_constraintTop_toBottomOf="@+id/editType" />

        <EditText
            android:id="@+id/editTextAbv"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/abv"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="@+id/editTextBrewery"
            app:layout_constraintTop_toBottomOf="@+id/editTextBrewery" />

        <EditText
            android:id="@+id/editTextIbu"
            android:layout_width="134dp"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:hint="@string/ibu"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/editTextBrewery"
            app:layout_constraintTop_toBottomOf="@+id/editTextBrewery" />

        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="0dp"
            android:layout_height="83dp"
            android:layout_marginTop="10dp"
            android:autofillHints="no"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/note"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/editTextIbu"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextAbv"
            app:layout_constraintTop_toBottomOf="@+id/editTextAbv"
            tools:ignore="TextContrastCheck" />

        <RadioGroup
            android:id="@+id/radioGroupBuy"
            android:layout_width="137dp"
            android:layout_height="99dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextAbv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextNote"
            app:layout_constraintTop_toBottomOf="@+id/editTextNote">

            <RadioButton
                android:id="@+id/radioButtonYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButtonNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="160dp"
            android:layout_height="26dp"
            android:layout_marginTop="10dp"
            android:text="@string/wouldBuyAgain"
            app:layout_constraintStart_toStartOf="@+id/editTextNote"
            app:layout_constraintTop_toBottomOf="@+id/editTextNote" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="205dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/opsSpinner"
            app:layout_constraintStart_toStartOf="@+id/radioGroupBuy"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupBuy" />

        <CheckBox
            android:id="@+id/checkBoxOrigin"
            android:layout_width="166dp"
            android:layout_height="49dp"
            android:text="@string/origin"
            app:layout_constraintEnd_toEndOf="@+id/editTextNote"
            app:layout_constraintTop_toTopOf="@+id/radioGroupBuy"
            tools:ignore="MissingConstraints" />

        <Spinner
            android:id="@+id/spinnerNote"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="@+id/checkBoxOrigin"
            app:layout_constraintHorizontal_bias="0.28"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>